@@ -32,7 +32,6 @@
 
   <!-- hive properties -->
   <property name="hive.root" value="${basedir}/hive/external"/>
-  <property name="hive.version" value="0.8.0-SNAPSHOT"/>
 
   <!-- build properties -->
   <property name="lib.dir" value="${basedir}/lib/" />
@@ -225,15 +224,10 @@
   <antcall target="model-enhance" />
   </target>
  
-  <!-- Build the jar, this is the default -->
-  <target name="fatjar" depends="compile-src">
+  <!-- Build the hcatalog client jar -->
+  <target name="clientjar" depends="compile-src">
      <jar jarfile="${build.dir}/${ant.project.name}/${hcatalog.jar}" basedir="${build.classes}">
-        <zipgroupfileset dir="${hive.root}/lib" includes="thrift-fb303-${thrift-fb303.version}.jar,thrift-${thrift.version}.jar,commons-lang-2.4.jar,derby.jar"/> 
-        <zipgroupfileset dir="${hive.root}/build/metastore" includes="hive-metastore-${hive.version}.jar"/> 
-        <zipgroupfileset dir="${hive.root}/build/ql" includes="hive-exec-${hive.version}.jar"/> 
-        <zipgroupfileset dir="${hive.root}/build/common" includes="hive-common-${hive.version}.jar"/> 
-        <zipgroupfileset dir="${hive.root}/build/serde" includes="hive-serde-${hive.version}.jar"/> 
-    </jar>
+     </jar>
   </target>
 
   <!--
@@ -250,10 +244,10 @@
 
   <!--
   ================================================================================
-  Build both fatjar and server-extensions
+  Build both clientjar and server-extensions
   ================================================================================
   -->
-  <target name="jar" depends="fatjar,server-extensions"/>
+  <target name="jar" depends="clientjar,server-extensions"/>
 
 
  <!--
@@ -287,7 +281,7 @@
   ================================================================================
   -->
   <!-- Build HCatalog test files -->
-  <target name="compile-test" depends="fatjar">
+  <target name="compile-test" depends="clientjar">
     <javac encoding="${build.encoding}" srcdir="${test.src.dir}" excludes="${excludes}"
         includes="**/*.java" destdir="${test.build.classes}" debug="${javac.debug}"
         optimize="${javac.optimize}" target="${javac.version}"
@@ -380,7 +374,7 @@
   Distribution Section
   ===============================================================================
   -->
-  <target name="package" depends="fatjar, docs" description="Create an HCatalog release">
+  <target name="package" depends="clientjar, docs" description="Create an HCatalog release">
     <mkdir dir="${dist.dir}" />
     <mkdir dir="${dist.dir}/lib" />
     <mkdir dir="${dist.dir}/conf" />
@@ -396,7 +390,9 @@
     <copy todir="${dist.dir}/lib" includeEmptyDirs="false">
       <fileset dir="${lib.dir}"/>
 
-      <fileset file="hcatalog-*.jar"/>
+      <fileset dir="${build.dir}/${ant.project.name}/">
+        <include name="hcatalog-*.jar"/>
+      </fileset>
 
       <fileset dir="hive/external/build/ivy/lib/default">
         <include name="jdo2-api-*.jar"/>
